[tool.poetry]
name = "venv-gpu"
version = "0.1.0"
description = ""
authors = ["Jorge <robledo.11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cudf-cu12 = {version = "24.10.*", source = "nvidia"}
cuml-cu12 = {version = "24.10.*", source = "nvidia"}
matplotlib = "^3.9.2"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
